--- a/src/views/donate.ejs
+++ b/src/views/donate.ejs
@@ -98,6 +98,7 @@
           <div class="donate-button">
             <a href="https://paypal.me/servantdiscord" class="donate-button" target="_blank">Donate</a>
           </div>
+          <div class="note">(Please provide your Discord Name#1234)</div>
         </div>
 
         <div class="serverboost">
