--- a/src/views/faq.ejs
+++ b/src/views/faq.ejs
@@ -181,7 +181,7 @@
                             <div class="a-text">
                                 <span>
                                     The prefix can be changed in the <a href="/dashboard">Dashboard</a>.<br />
-                                    Make sure to change the prefix in the dashboard for your server. The personal prefix only applies in DM's.
+                                    Make sure to change the prefix in the dashboard of your server. The personal prefix only applies in DM's.
                                 </span>
                             </div>
                         </div>
@@ -209,7 +209,7 @@
                             <div class="a-text">
                                 <span>
                                     No, they just mark placeholders.<br />
-                                    For example <span class="highlightme light">!clear [1 - 100]</span> becomes <span class="highlightme light">!clear 50</span>
+                                    For example <span class="highlightme light">!clear [1 - 100]</span> becomes <span class="highlightme light">!clear 50</span>.
                                 </span>
                             </div>
                         </div>
