--- a/src/views/reactionrole.ejs
+++ b/src/views/reactionrole.ejs
@@ -33,6 +33,7 @@
 
 <script>
   var botRoles = <%- JSON.stringify(botGuild.roles.cache) %>;
+  var var_channels = <%- JSON.stringify(channels) %>;
   var botChannels = <%- JSON.stringify(botGuild.channels.cache) %>;
   var var_is_supporter = <%- JSON.stringify(isSupporter); %>;
   var var_color_code = <%- JSON.stringify(color_code); %>;
