--- a/src/views/livestream.ejs
+++ b/src/views/livestream.ejs
@@ -43,11 +43,13 @@ if (disabled_plugins[0]) {
 
 let public_mode = 'checked';
 let live_role_id = 0;
+let ping_role_id = 0;
 let tc_id = 0;
 let announcement = '';
 if (guild_livestreams.length > 0) {
     if (!guild_livestreams[0].is_public) public_mode = '';
     live_role_id = guild_livestreams[0].role_id;
+    ping_role_id = guild_livestreams[0].ping_role_id;
     tc_id = guild_livestreams[0].tc_id;
     announcement = guild_livestreams[0].announcement;
 }
@@ -151,7 +153,7 @@ if (guild_livestreams.length > 0) {
                                 <% }); %>
 
                             </select>
-                            <label for="level_speed" class="control-label level">Live Role</label><i class="bar"></i>
+                            <label for="livestream-role" class="control-label level">Live Role</label><i class="bar"></i>
                         </div>
                     </div>
 
@@ -163,13 +165,32 @@ if (guild_livestreams.length > 0) {
                                 <% let tc_default_selected = tc_id == 0 ? 'selected' : ''; %>
                                 <option value="0" <%= tc_default_selected %>>No text channel (Announcement disabled)</option>
                                 <% botGuild.channels.cache.forEach(channel => { %>
-                                <% if (channel.type === 'text' || channel.type === 'news') { %>
+                                <% if ((channel.type === 'text' || channel.type === 'news') && channel.viewable) { %>
                                 <% let tc_selected = tc_id == channel.id ? 'selected' : ''; %>
                                 <option value="<%= channel.id %>" <%= tc_selected %>>#<%= channel.name %> <%= channel.parent ? '(' + channel.parent.name + ')' : '' %></option>
                                 <% } %>
                                 <% }); %>
                             </select>
                             <label for="tc" class="control-label">Text Channel</label><i class="bar"></i>
+                        </div>
+                    </div>
+
+                    <div class="livestream settings-disclaimer">
+                        <div>The role that gets pinged upon posting the announcement.</div>
+                        <br />
+                        <br />
+                        <div class="form-group">
+                            <select onchange="changeTcSel(this); submit_livestream();" id="livestream_ping_role" name="livestream_ping_role">
+                                <% let ping_role_id_selected = ping_role_id == 0 ? 'selected' : ''; %>
+                                <option value="0" <%= ping_role_id_selected %>>No role (Announcement without ping)</option>
+
+                                <% botGuild.roles.cache.forEach(role => { %>
+                                <%          let ping_role_sel = ping_role_id == role.id ? 'selected' : ''; %>
+                                <option style="color: #<%= role.color.toString(16) %>" value="<%= role.id %>" <%= ping_role_sel %>><%= role.name %></option>
+                                <% }); %>
+
+                            </select>
+                            <label for="livestream_ping_role" class="control-label level">Ping Role</label><i class="bar"></i>
                         </div>
                     </div>
 
