--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -6,25 +6,18 @@
     <div class="footer">
       <div class="foot1">
         <h3>Links</h3>
-        <p><a href="https://invite.servant.gg/" target="_blank"><img src="/images/servant_ava.png"> Invite Servant</a>
-        </p>
-        <p><a href="https://support.servant.gg/" target="_blank"><i class="fab fa-discord"></i> Support Server</a>
-        </p>
-        <p><a href="https://botlist.servant.gg/" target="_blank"><i class="fas fa-robot"></i> Discord Bot List</a>
-        </p>
+        <p><a href="https://support.servant.gg/" target="_blank"><i class="fab fa-discord"></i> Support Server</a></p>
+        <p><a href="https://botlist.servant.gg/" target="_blank"><i class="fas fa-robot"></i> Discord Bot List</a></p>
       </div>
       <div class="foot2">
         <h3>Servant</h3>
-        <p><a href="https://twitter.com/ServantDiscord" target="_blank"><i class="fab fa-twitter"></i> Twitter:
-            ServantDiscord</a></p>
-        <p><a href="https://github.com/Tancred423/Servant" target="_blank"><i class="fab fa-github"></i> GitHub: Servant</a></p>
-        <p><a href="https://github.com/Tancred423/servant.gg" target="_blank"><i class="fab fa-github"></i> GitHub: servant.gg</a></p>
+        <p><a href="https://invite.servant.gg/" target="_blank"><img src="/images/servant_ava.png"> Invite Servant</a></p>
+        <p><a href="https://twitter.com/ServantDiscord" target="_blank"><i class="fab fa-twitter"></i> Twitter: ServantDiscord</a></p>
       </div>
       <div class="foot3">
         <h3>Tancred</h3>
         <p><i class="fab fa-discord"></i> Discord: Tancred#0001</p>
         <p><a href="https://twitter.com/Tancred423" target="_blank"><i class="fab fa-twitter"></i> Twitter: Tancred423</a></p>
-        <p><a href="https://github.com/Tancred423/" target="_blank"><i class="fab fa-github"></i> GitHub: Tancred423</a></p>
         </ul>
       </div>
       <div class="copyright">&copy;
