--- a/src/views/voicelobby.ejs
+++ b/src/views/voicelobby.ejs
@@ -92,7 +92,7 @@
 
                             <select onchange="submit_voicelobby();" id="lobby_channels" name="lobby_channels" data-placeholder="Select voice channels..." multiple class="chosen-select">
                                 <% botGuild.channels.cache.forEach(channel => { %>
-                                <% if (channel.type === 'voice') { %>
+                                <% if (channel.type === 'voice' && channel.viewable) { %>
 
                                 <% let selected = ""; %>
                                 <% voicelobbies.forEach(lobby => { %>
