Update for Servant v6.3.0

--- a/src/views/partials/commands/fun.ejs
+++ b/src/views/partials/commands/fun.ejs
@@ -7,5 +7,6 @@
   <%- include('fun/commands') -%>
   <%- include('fun/flip') -%>
   <%- include('fun/love') -%>
+  <%- include('fun/mirror') -%>
   <%- include('fun/profile') -%>
 </ul>
