--- a/src/views/partials/commands/interaction.ejs
+++ b/src/views/partials/commands/interaction.ejs
@@ -3,6 +3,7 @@
   <%- include('interaction/birthday') -%>
   <%- include('interaction/bite') -%>
   <%- include('interaction/bully') -%>
+  <%- include('interaction/cheers') -%>
   <%- include('interaction/cookie') -%>
   <%- include('interaction/cop') -%>
   <%- include('interaction/dab') -%>
