--- a/src/views/partials/commands/random.ejs
+++ b/src/views/partials/commands/random.ejs
@@ -5,9 +5,11 @@
   <%- include('random/dog') -%>
   <%- include('random/fennec') -%>
   <%- include('random/fox') -%>
+  <%- include('random/frog') -%>
   <%- include('random/koala') -%>
   <%- include('random/panda') -%>
   <%- include('random/pikachu') -%>
   <%- include('random/redpanda') -%>
   <%- include('random/sloth') -%>
+  <%- include('random/wolf') -%>
 </ul>
