--- a/src/views/partials/commands/random/frog.ejs
+++ b/src/views/partials/commands/random/frog.ejs
@@ -1,34 +1,26 @@
 <li>
-    <div class="collapsible-header"><i class="fas fa-volleyball-ball"></i> Flip</div>
+    <div class="collapsible-header"><i class="fas fa-dice"></i> Frog</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
             <div class="cmd-description">
                 <h3><i class="fas fa-info-circle"></i> Description</h3>
                 <p>
-                    Flip a text or user
+                    Random frog picture
                 </p>
             </div>
             <div class="cmd-alias">
                 <h3><i class="fas fa-signature"></i> Alias</h3>
                 <p>
-                    unflip
+                    froggo
                 </p>
             </div>
             <div class="cmd-usage">
                 <h3><i class="fas fa-exclamation-circle"></i> Usage</h3>
 
                 <div class="usage-box">
-                    <h4>Flip a user</h4>
+                    <h4>Post a random frog picture</h4>
                     <p>
-                        Command: <span class="highlightme">!flip @user</span>
-                    </p>
-                    <h4>Unflip a user</h4>
-                    <p>
-                        Command: <span class="highlightme">!unflip @user</span>
-                    </p>
-                    <h4>Flip a text</h4>
-                    <p>
-                        Command: <span class="highlightme">!flip your text here</span>
+                        Command: <span class="highlightme">!frog</span>
                     </p>
                 </div>
             </div>
