--- a/src/views/partials/commands/interaction/cheers.ejs
+++ b/src/views/partials/commands/interaction/cheers.ejs
@@ -1,34 +1,27 @@
 <li>
-    <div class="collapsible-header"><i class="fas fa-volleyball-ball"></i> Flip</div>
+    <div class="collapsible-header"><i class="far fa-comments"></i> Cheers</div>
     <div class="collapsible-body">
         <div class="cmd-wrapper">
             <div class="cmd-description">
                 <h3><i class="fas fa-info-circle"></i> Description</h3>
                 <p>
-                    Flip a text or user
+                    Raise a toast to someone
                 </p>
             </div>
             <div class="cmd-alias">
-                <h3><i class="fas fa-signature"></i> Alias</h3>
+                <h3><i class="fas fa-signature"></i> Aliases</h3>
                 <p>
-                    unflip
+                    toast<br />
+                    prost
                 </p>
             </div>
             <div class="cmd-usage">
                 <h3><i class="fas fa-exclamation-circle"></i> Usage</h3>
 
                 <div class="usage-box">
-                    <h4>Flip a user</h4>
+                    <h4>Raise a toast to someone</h4>
                     <p>
-                        Command: <span class="highlightme">!flip @user</span>
-                    </p>
-                    <h4>Unflip a user</h4>
-                    <p>
-                        Command: <span class="highlightme">!unflip @user</span>
-                    </p>
-                    <h4>Flip a text</h4>
-                    <p>
-                        Command: <span class="highlightme">!flip your text here</span>
+                        Command: <span class="highlightme">!cheers @user</span>
                     </p>
                 </div>
             </div>
