Yeye new stuff. Yippy

--- a/src/views/faq.ejs
+++ b/src/views/faq.ejs
@@ -322,7 +322,7 @@
                             <div class="a-text">
                                 <span>
                                     Arguments are what you provide after the command. E.g. for <span class="highlightme light">!clear 50</span> "50" is an argument.<br />
-                                    Mentions are also knows as pings, e.g. @Servant.<br />
+                                    Mentions are also known as pings, e.g. @Servant.<br />
                                     If it was invalid, you e.g. provided @everyone when a user mention was needed.
                                 </span>
                             </div>
