--- a/src/views/partials/commands/fun/profile.ejs
+++ b/src/views/partials/commands/fun/profile.ejs
@@ -31,7 +31,7 @@
             <div class="cmd-hint">
                 <h3><i class="fas fa-comment-dots"></i> Hint</h3>
                 <p>
-                    The background image and embed colour can be customized if you are Servant-Supporter <img class="emote-big" src="/images/servantLove.png" alt="servantLove">
+                    The background image and embed colour can be customized if you are a Servant-Supporter <img class="emote-big" src="/images/servantLove.png" alt="servantLove">
                 </p>
             </div>
         </div>
