--- a/src/views/partials/commands/standard/help.ejs
+++ b/src/views/partials/commands/standard/help.ejs
@@ -5,7 +5,7 @@
             <div class="cmd-description">
                 <h3><i class="fas fa-info-circle"></i> Description</h3>
                 <p>
-                    Standard help command with all commands
+                    An informative help message
                 </p>
             </div>
             <div class="cmd-alias">
