--- a/src/views/partials/commands/interaction/cheers.ejs
+++ b/src/views/partials/commands/interaction/cheers.ejs
@@ -12,7 +12,8 @@
                 <h3><i class="fas fa-signature"></i> Aliases</h3>
                 <p>
                     toast<br />
-                    prost
+                    prost<br />
+                    prosit
                 </p>
             </div>
             <div class="cmd-usage">
