--- a/src/views/partials/commands/interaction.ejs
+++ b/src/views/partials/commands/interaction.ejs
@@ -7,6 +7,7 @@
   <%- include('interaction/cookie') -%>
   <%- include('interaction/cop') -%>
   <%- include('interaction/dab') -%>
+  <%- include('interaction/f') -%>
   <%- include('interaction/flex') -%>
   <%- include('interaction/highfive') -%>
   <%- include('interaction/hug') -%>
