--- a/src/views/customcommands.ejs
+++ b/src/views/customcommands.ejs
@@ -43,6 +43,7 @@
   var var_timestamp_tzs = <%- JSON.stringify(timestamp_tz_formats); %>;
   var var_prefix = <%- JSON.stringify(prefix); %>;
   var varCommandsAmount = <%- JSON.stringify(commandsAmount); %>;
+  var varCcAliases = <%- JSON.stringify(ccAliases); %>;
 </script>
 
 <% var plugin = 'checked'; %>
