--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -87,7 +87,49 @@
         A few highlights of what I can do! 👇
       </p>
 
-      <div class="highlight-charts">
+      <div class="highlight-images">
+        <img src="https://i.imgur.com/u6OnJcR.png" alt="Clear">
+
+        <img src="https://i.imgur.com/veenmcw.png" alt="Giveaways">
+
+        <img src="https://i.imgur.com/jBMiSx8.png" alt="Polls">
+
+        <img src="https://i.imgur.com/ykldav4.png" alt="QuickPolls">
+
+        <img src="https://i.imgur.com/3kNLZ6E.png" alt="Ratings">
+
+        <img src="https://i.imgur.com/WcqDtpi.png" alt="RemindMe">
+
+        <img src="https://i.imgur.com/eJRyW5k.png" alt="Signup">
+
+        <img src="https://i.imgur.com/lzMtlLT.png" alt="Dashboard">
+
+        <img src="https://i.imgur.com/YJVJ5nX.png" alt="CustomCommands">
+
+        <img src="https://i.imgur.com/SxTczQa.png" alt="VoiceLobby">
+
+        <img src="https://i.imgur.com/OYA3lPN.png" alt="Birthday">
+
+        <img src="https://i.imgur.com/o7i2uuq.png" alt="Leveling">
+
+        <img src="https://i.imgur.com/YN7wslc.png" alt="ReactionRoles">
+
+        <img src="https://i.imgur.com/HvVOMLU.png" alt="AutoRoles">
+
+        <img src="https://i.imgur.com/aUE9pOk.png" alt="Livestream">
+
+        <img src="https://i.imgur.com/J1ZXUnl.png" alt="Profiles">
+
+        <img src="https://i.imgur.com/CqV5Chf.png" alt="Interactions">
+
+        <img src="https://i.imgur.com/tNtOxhv.png" alt="Fun">
+
+        <img src="https://i.imgur.com/ZNj4d7H.png" alt="Random">
+
+        <img src="https://i.imgur.com/k4Zbk2O.png" alt="Conclusion">
+      </div>
+
+      <!-- <div class="highlight-charts">
         <div class="highlight-chart" id="mod">
           <div class="title">
             <i class="fas fa-user-cog"></i> Moderation
@@ -130,7 +172,7 @@
             <div class="body-entry">Get random pictures of animals or pika pika</div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
     <div class="main-sidebar">
       <div class="invitechart">
