--- a/src/views/partials/commands/utility.ejs
+++ b/src/views/partials/commands/utility.ejs
@@ -1,4 +1,5 @@
 <ul class="collapsible">
+  <%- include('utility/customcommands') -%>
   <%- include('utility/giveaway') -%>
   <%- include('utility/poll') -%>
   <%- include('utility/quickpoll') -%>
