--- a/src/views/partials/moderate_guilds.ejs
+++ b/src/views/partials/moderate_guilds.ejs
@@ -17,7 +17,7 @@
     <a href="/dashboard/<%= guild.id %>" class="dashboard-button">
         <div class="guild-name">
             <% if (guild.icon === null) { %>
-            <img src="images/no_user.png" alt="Default Server Icon">
+            <img src="/images/no_user.png" alt="Default Server Icon">
             <% } else { %>
             <img src="https://cdn.discordapp.com/icons/<%= guild.id %>/<%= guild.icon %>.png" alt="Server Icon">
             <% } %>
@@ -32,7 +32,7 @@
     <a href="https://discord.com/oauth2/authorize?client_id=436916794796670977&permissions=419916880&scope=bot&guild_id=<%= guild.id %>" class="dashboard-button" target="_blank">
         <div class="guild-name">
             <% if (guild.icon === null) { %>
-            <img src="images/no_user.png" alt="Default Server Icon">
+            <img src="/images/no_user.png" alt="Default Server Icon">
             <% } else { %>
             <img src="https://cdn.discordapp.com/icons/<%= guild.id %>/<%= guild.icon %>.png" alt="Server Icon">
             <% } %>
