--- a/src/views/partials/header-2.ejs
+++ b/src/views/partials/header-2.ejs
@@ -19,8 +19,10 @@
 <!-- Twemoji Picker -->
 <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
 <link href="/stylesheets/jquery.lsxemojipicker.css" rel="stylesheet">
-<!-- <script src="https://twemoji.maxcdn.com/2/twemoji.min.js"></script> -->
 <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
+
+<!-- Statistics Graph -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 </head>
 
 <body>
