Added TTT Panel

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -118,6 +118,8 @@
         <img src="https://i.imgur.com/aUE9pOk.png" alt="Livestream">
 
         <img src="https://i.imgur.com/J1ZXUnl.png" alt="Profiles">
+        
+        <img src="https://i.imgur.com/qKbciUU.png" alt="TicTacToe">
 
         <img src="https://i.imgur.com/CqV5Chf.png" alt="Interactions">
 
