Update for Servant v6.5.1

--- a/src/views/faq.ejs
+++ b/src/views/faq.ejs
@@ -90,7 +90,7 @@
                             </div>
                             <div class="a-text">
                                 <span>
-                                    Servant is designed to satisfy all your needs for you Discord server.
+                                    Servant is designed to satisfy all your needs for your Discord server.
                                     I personally don't like to have a ton of bots on my server, so I decided to create one, that can do
                                     almost everything.
                                     While doing this, it was very important to me, that each feature is high quality as many
@@ -199,7 +199,7 @@
                                 <span>Q</span>
                             </div>
                             <div class="q-text">
-                                <span>Do I have to use the braces <span class="highlightme light">&lt;</span> and <span class="highlightme light">&gt;</span> or <span class="highlightme light">[</span> and <span class="highlightme light">]</span> in any command?</span>
+                                <span>Do I have to use the braces <span class="highlight-me light">&lt;</span> and <span class="highlight-me light">&gt;</span> or <span class="highlight-me light">[</span> and <span class="highlight-me light">]</span> in any command?</span>
                             </div>
                         </div>
                         <div class="a">
@@ -209,7 +209,7 @@
                             <div class="a-text">
                                 <span>
                                     No, they just mark placeholders.<br />
-                                    For example <span class="highlightme light">!clear [1 - 100]</span> becomes <span class="highlightme light">!clear 50</span>.
+                                    For example <span class="highlight-me light">!clear [1 - 100]</span> becomes <span class="highlight-me light">!clear 50</span>.
                                 </span>
                             </div>
                         </div>
@@ -321,7 +321,7 @@
                             </div>
                             <div class="a-text">
                                 <span>
-                                    Arguments are what you provide after the command. E.g. for <span class="highlightme light">!clear 50</span> "50" is an argument.<br />
+                                    Arguments are what you provide after the command. E.g. for <span class="highlight-me light">!clear 50</span> "50" is an argument.<br />
                                     Mentions are also known as pings, e.g. @Servant.<br />
                                     If it was invalid, you e.g. provided @everyone when a user mention was needed.
                                 </span>
@@ -359,12 +359,12 @@
                                     - Winners (Giveaway): winners, winner, w<br />
                                     - Participants (Signup): participants, participant, p<br />
                                     <br />
-                                    For example <span class="highlightme light">!giveaway 1w 2 day " a prize" 1 winner 1 h our</span> is a completely valid command.<br />
-                                    The result would be: <span class="highlightme light">1w</span> + <span class="highlightme light">1 winner</span> = 2 winners and <span class="highlightme light">2 day</span> + <span class="highlightme light">1 h our</span> = in 2 days, 1 hour.<br />
-                                    Spaces will be ignored, thats why <span class="highlightme light">h our</span> indeed does work.<br />
+                                    For example <span class="highlight-me light">!giveaway 1w 2 day " a prize" 1 winner 1 h our</span> is a completely valid command.<br />
+                                    The result would be: <span class="highlight-me light">1w</span> + <span class="highlight-me light">1 winner</span> = 2 winners and <span class="highlight-me light">2 day</span> + <span class="highlight-me light">1 h our</span> = in 2 days, 1 hour.<br />
+                                    Spaces will be ignored, thats why <span class="highlight-me light">h our</span> indeed does work.<br />
                                     Also it doesn't matter if the arguments are before the "a prize" or after... or both.<br />
                                     <br />
-                                    Of course, that command looks messy. Fancier would be: <span class="highlightme light">!giveaway "a prize" 2w 2d 1h</span> which technically is exactly the same.
+                                    Of course, that command looks messy. Fancier would be: <span class="highlight-me light">!giveaway "a prize" 2w 2d 1h</span> which technically is exactly the same.
                                 </span>
                             </div>
                         </div>
